[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warpfield"
version = "0.2.2"
description = "GPU-accelerated 3D non-rigid registration"
authors = [
    { name = "jlab.berlin" },
    { name = "Maximilian Hoffmann" },
    { name = "Benjamin Judkewitz" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["warpfield", "python"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "cupy-cuda12x; platform_system != 'Darwin'",
    "mlx; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tqdm",
    "pydantic",
    "pyyaml",
    "h5py",
    "hdf5plugin",
    "nibabel",
    "tifffile",
    "scikit-image",
    "imageio",
    "imageio-ffmpeg",
    "pynrrd",
    "zarr",
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/danionella/warpfield"
Documentation = "https://danionella.github.io/warpfield/"

[project.scripts]
warpfield = "warpfield.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["warpfield*"]

[tool.setuptools.package-data]
warpfield = ["recipes/*.yml"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 120
skip_magic_trailing_comma = true
